--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.2.RELEASE</version><!--update spring-boot version -->
+        <version>2.5.2</version><!--update spring-boot version -->
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -19,7 +19,7 @@
 
     <properties>
         <java.version>11</java.version>
-        <spring-cloud.version>Hoxton.SR7</spring-cloud.version>
+        <spring-cloud.version>2020.0.3</spring-cloud.version>
         <springfox.version>3.0.0</springfox.version>
         <mysql.version>8.0.21</mysql.version>
         <adt-maven.version>1.1.3</adt-maven.version>
