--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.2</version><!--update spring-boot version -->
+        <version>2.7.7</version><!--update spring-boot version -->
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -18,11 +18,12 @@
     <description>Spring Boot搭建RestFul Api Server</description>
 
     <properties>
-        <java.version>11</java.version>
-        <spring-cloud.version>2020.0.3</spring-cloud.version>
-        <springfox.version>3.0.0</springfox.version>
-        <mysql.version>8.0.21</mysql.version>
+        <java.version>17</java.version>
+        <spring-cloud.version>2021.0.1</spring-cloud.version>
+        <springdoc.version>1.6.6</springdoc.version>
+        <mysql.version>8.0.31</mysql.version>
         <adt-maven.version>1.1.3</adt-maven.version>
+        <guava.version>31.1-jre</guava.version>
         <resource.delimiter>@</resource.delimiter>
     </properties>
 
@@ -55,11 +56,10 @@
         </dependency>
 
         <!-- 使用Swagger2 產生API文件 -->
-        <!-- https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter -->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
-            <version>${springfox.version}</version>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc.version}</version>
         </dependency>
 
         <dependency>
@@ -101,6 +101,13 @@
             <version>${mysql.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
@@ -121,16 +128,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.6.2</version>
                 <!-- 解決spring-boot:run中文亂碼問題 -->
                 <configuration>
                     <fork>true</fork>
                     <!-- 新增jvm參數 -->
                     <jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
             <!-- jpa自動生成實體類，相關配置完成後使用mvn jpa-entity-generator:generateAll -e產生實體類別 -->
             <plugin>
@@ -194,7 +198,7 @@
                 <database.driver.name>com.mysql.cj.jdbc.Driver</database.driver.name>
                 <database.url>jdbc:mysql://localhost:3306/master?useUnicode=true<![CDATA[&]]>characterEncoding=utf8<![CDATA[&]]>useSSL=false<![CDATA[&]]>serverTimezone=GMT%2B8</database.url>
                 <database.username>root</database.username>
-                <database.password>LocalPwd3306</database.password>
+                <database.password>root</database.password>
                 <database.schema>master</database.schema>
                 <logback.path>${project.basedir}/logs</logback.path>
                 <logback.name>${project.name}</logback.name>
@@ -211,7 +215,7 @@
                 <database.driver.name>com.mysql.cj.jdbc.Driver</database.driver.name>
                 <database.url>jdbc:mysql://localhost:3306/master?useUnicode=true<![CDATA[&]]>characterEncoding=utf8<![CDATA[&]]>useSSL=false<![CDATA[&]]>serverTimezone=GMT%2B8</database.url>
                 <database.username>root</database.username>
-                <database.password>LocalPwd3306</database.password>
+                <database.password>root</database.password>
                 <database.schema>master</database.schema>
                 <logback.path>${project.basedir}/logs</logback.path>
                 <logback.name>${project.name}</logback.name>
@@ -225,7 +229,7 @@
                 <database.driver.name>com.mysql.cj.jdbc.Driver</database.driver.name>
                 <database.url>jdbc:mysql://localhost:3306/master?useUnicode=true<![CDATA[&]]>characterEncoding=utf8<![CDATA[&]]>useSSL=false<![CDATA[&]]>serverTimezone=GMT%2B8</database.url>
                 <database.username>root</database.username>
-                <database.password>LocalPwd3306</database.password>
+                <database.password>root</database.password>
                 <database.schema>master</database.schema>
                 <logback.path>${project.basedir}/logs</logback.path>
                 <logback.name>${project.name}</logback.name>
