--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,7 +14,7 @@ spring:
       maximum-pool-size: 10
       auto-commit: true
       idle-timeout: 600000
-      pool-name: SeroHikariCP
+      pool-name: HikariCP
       max-lifetime: 1800000
       connection-timeout: 30000
   jpa:
@@ -28,3 +28,8 @@ spring:
 
 server:
   port: @server.port@
+
+#配置logback變數
+logback:
+  path: @logback.path@
+  name: @logback.name@
