--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.1</version><!--update spring-boot version -->
+        <version>3.4.1</version><!--update spring-boot version -->
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -17,14 +17,34 @@
     <name>spring-boot-restful-api</name>
     <description>Spring Boot搭建RestFul Api Server</description>
 
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
+
     <properties>
-        <java.version>17</java.version>
-        <spring-cloud.version>2022.0.0</spring-cloud.version>
-        <springdoc.version>1.6.6</springdoc.version>
-        <mysql.version>8.0.31</mysql.version>
+        <java.version>21</java.version>
+        <spring-cloud.version>2024.0.0</spring-cloud.version>
+        <springdoc.version>2.7.0</springdoc.version>
+        <mysql.version>9.1.0</mysql.version>
         <adt-maven.version>1.1.3</adt-maven.version>
-        <guava.version>31.1-jre</guava.version>
-        <micrometer-tracing.version>1.0.1</micrometer-tracing.version>
+        <guava.version>33.3.1-jre</guava.version>
         <resource.delimiter>@</resource.delimiter>
     </properties>
 
@@ -59,7 +79,7 @@
         <!-- 使用Swagger2 產生API文件 -->
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc.version}</version>
         </dependency>
 
@@ -87,22 +107,11 @@
             <version>${mysql.version}</version>
         </dependency>
 
-
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-tracing</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-tracing-bridge-brave</artifactId>
         </dependency>
 
     </dependencies>
@@ -127,17 +136,8 @@
     </dependencyManagement>
 
     <build>
-        <finalName>spring-boot-restful-api</finalName>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <!-- 解決spring-boot:run console中文亂碼 -->
-                <configuration>
-                    <!-- 新增jvm參數 -->
-                    <jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
-                </configuration>
-            </plugin>
             <!-- jpa自動生成實體類，相關配置完成後使用mvn jpa-entity-generator:generateAll -e產生實體類別 -->
             <plugin>
                 <groupId>com.smartnews</groupId>
