--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.1</version><!--update spring-boot version -->
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-
     <groupId>idv.module</groupId>
     <artifactId>spring-boot-restful-api</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>spring-boot-restful-api</name>
     <description>Spring Boot搭建RestFul Api Server</description>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.5.3</version><!-- update spring-boot version -->
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
     <repositories>
         <repository>
@@ -40,7 +40,10 @@
 
     <properties>
         <java.version>21</java.version>
-        <spring-cloud.version>2024.0.0</spring-cloud.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <micrometer-tracing.version>1.5.0</micrometer-tracing.version>
+        <spring-cloud.version>2025.0.0-RC1</spring-cloud.version>
         <springdoc.version>2.7.0</springdoc.version>
         <mysql.version>9.1.0</mysql.version>
         <adt-maven.version>1.1.3</adt-maven.version>
@@ -138,6 +141,23 @@
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <delimiters>@</delimiters>
+                    <useDefaultDelimiters>false</useDefaultDelimiters>
+                </configuration>
+            </plugin>
             <!-- jpa自動生成實體類，相關配置完成後使用mvn jpa-entity-generator:generateAll -e產生實體類別 -->
             <plugin>
                 <groupId>com.smartnews</groupId>
