⬆️ Migrate from MySQL to MariaDB and update related configurations

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,7 +25,7 @@ spring:
     properties:
       hibernate:
         default_schema: @database.schema@
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MariaDBDialect
 
 server:
   port: @server.port@
