--- a/pom.xml
+++ b/pom.xml
@@ -42,13 +42,10 @@
         <java.version>25</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <micrometer-tracing.version>1.5.0</micrometer-tracing.version>
-        <spring-cloud.version>2025.0.0-RC1</spring-cloud.version>
-        <springdoc.version>2.7.0</springdoc.version>
-        <mysql.version>9.1.0</mysql.version>
+        <springdoc.version>2.8.14</springdoc.version>
+        <mariadb.version>3.5.6</mariadb.version>
         <adt-maven.version>1.1.3</adt-maven.version>
-        <guava.version>33.3.1-jre</guava.version>
-        <resource.delimiter>@</resource.delimiter>
+        <guava.version>33.5.0-jre</guava.version>
     </properties>
 
     <dependencies>
@@ -103,11 +100,20 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>${mysql.version}</version>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing</artifactId>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>${mariadb.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
@@ -121,13 +127,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
             <dependency>
                 <groupId>io.micrometer</groupId>
                 <artifactId>micrometer-tracing-bom</artifactId>
@@ -164,11 +163,10 @@
                 <artifactId>maven-jpa-entity-generator-plugin</artifactId>
                 <version>0.99.8</version>
                 <dependencies>
-                    <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
                     <dependency>
-                        <groupId>com.mysql</groupId>
-                        <artifactId>mysql-connector-j</artifactId>
-                        <version>${mysql.version}</version>
+                        <groupId>org.mariadb.jdbc</groupId>
+                        <artifactId>mariadb-java-client</artifactId>
+                        <version>${mariadb.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -218,8 +216,8 @@
             <properties>
                 <spring.profiles.active>dev</spring.profiles.active>
                 <server.port>8080</server.port>
-                <database.driver.name>com.mysql.cj.jdbc.Driver</database.driver.name>
-                <database.url>jdbc:mysql://localhost:3306/master?useUnicode=true<![CDATA[&]]>characterEncoding=utf8<![CDATA[&]]>useSSL=false<![CDATA[&]]>serverTimezone=GMT%2B8</database.url>
+                <database.driver.name>org.mariadb.jdbc.Driver</database.driver.name>
+                <database.url>jdbc:mariadb://localhost:3306/master?useUnicode=true<![CDATA[&]]>characterEncoding=utf8<![CDATA[&]]>useSSL=false<![CDATA[&]]>serverTimezone=GMT%2B8</database.url>
                 <database.username>root</database.username>
                 <database.password>root</database.password>
                 <database.schema>master</database.schema>
@@ -235,8 +233,8 @@
             <properties>
                 <spring.profiles.active>test</spring.profiles.active>
                 <server.port>8080</server.port>
-                <database.driver.name>com.mysql.cj.jdbc.Driver</database.driver.name>
-                <database.url>jdbc:mysql://localhost:3306/master?useUnicode=true<![CDATA[&]]>characterEncoding=utf8<![CDATA[&]]>useSSL=false<![CDATA[&]]>serverTimezone=GMT%2B8</database.url>
+                <database.driver.name>org.mariadb.jdbc.Driver</database.driver.name>
+                <database.url>jdbc:mariadb://localhost:3306/master?useUnicode=true<![CDATA[&]]>characterEncoding=utf8<![CDATA[&]]>useSSL=false<![CDATA[&]]>serverTimezone=GMT%2B8</database.url>
                 <database.username>root</database.username>
                 <database.password>root</database.password>
                 <database.schema>master</database.schema>
@@ -249,8 +247,8 @@
             <properties>
                 <spring.profiles.active>prod</spring.profiles.active>
                 <server.port>8080</server.port>
-                <database.driver.name>com.mysql.cj.jdbc.Driver</database.driver.name>
-                <database.url>jdbc:mysql://localhost:3306/master?useUnicode=true<![CDATA[&]]>characterEncoding=utf8<![CDATA[&]]>useSSL=false<![CDATA[&]]>serverTimezone=GMT%2B8</database.url>
+                <database.driver.name>org.mariadb.jdbc.Driver</database.driver.name>
+                <database.url>jdbc:mariadb://localhost:3306/master?useUnicode=true<![CDATA[&]]>characterEncoding=utf8<![CDATA[&]]>useSSL=false<![CDATA[&]]>serverTimezone=GMT%2B8</database.url>
                 <database.username>root</database.username>
                 <database.password>root</database.password>
                 <database.schema>master</database.schema>
