--- a/src/main/resources/entityGenConfig.yml
+++ b/src/main/resources/entityGenConfig.yml
@@ -1,7 +1,7 @@
 ## jdbc設定
 jdbcSettings:
-  driverClassName: "com.mysql.cj.jdbc.Driver"
-  url: "jdbc:mysql://localhost:3306/master?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8"
+  driverClassName: "org.mariadb.jdbc.Driver"
+  url: "jdbc:mariadb://localhost:3306/master?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8"
   username: "root"
   password: "root"
 
